--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <span>Electron quick start</span>
         </div>
 
-        <div id="window-controls">
+        <div id="sys-btns">
           <div class="button" id="min-button">
             <img class="icon" src="icons/min-w-10.png" draggable="false" />
           </div>
