--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <header id="titlebar">
       <div id="drag-region">
-        <div id="window-title">
-          <span>Electron quick start</span>
+        <div id="caption">
+          <span
+            >Test Custom Titlebar in Electron.est Custom Titlebar in Electron.est Custom Titlebar in Electron.
+          </span>
         </div>
 
         <div id="sys-btns">
