--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Custom titlebar</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -12,12 +12,22 @@
         <div id="app-icon">
           <img src="icons/code_70x70.png" draggable="false" />
         </div>
-        <div id="caption">
-          <span
-            >Test Custom Titlebar in Electron.est Custom Titlebar in Electron.est Custom Titlebar in Electron.
-          </span>
+
+        <!-- menu  -->
+        <div id="sys-menus">
+          <ul>
+            <li>File</li>
+            <li>Edit</li>
+            <li>Selection</li>
+            <li>About</li>
+          </ul>
+          <!-- caption -->
+          <div id="caption">
+            <span><b>Test Custom Titlebar in Electron</b></span>
+          </div>
         </div>
 
+        <!-- system buttons -->
         <div id="sys-btns">
           <div class="button" id="min-button">
             <img class="icon" src="icons/min-w-10.png" draggable="false" />
