divinector.html menubar 연습

--- a/design/center1.html
+++ b/design/center1.html
@@ -16,9 +16,14 @@
         background-color: orange;
         margin: 0 auto;
         padding: 10px;
+        justify-content: center;
+
+        display: table;
       }
 
       .children {
+        display: table-cell;
+        vertical-align: middle;
         width: 200px;
         height: 200px;
         background-color: red;
@@ -37,6 +42,7 @@
     <div class="parents">
       <div class="children">
         <!-- <img id="centered_image" src="hd.jpg" /> -->
+
         <img src="code_70x70.png" alt="" id="centered_image" />
       </div>
     </div>
