--- a/design/index-design.html
+++ b/design/index-design.html
@@ -15,29 +15,63 @@
         </div>
 
         <!-- menu  -->
-        <div id="sys-menus">
-          <ul>
-            <li><span>File</span></li>
-            <li><span>Edit</span></li>
-
-            <li class="dropdown">
-              <span>Run</span>
-              <ul class="dropdown-content">
-                <li class="enabled">Start Debugging</li>
-                <li class="enabled">Run Without Debugging</li>
-                <li class="divider"></li>
-                <li class="disabled">Stop Debugging</li>
-                <li class="disabled">Restart Debugging</li>
+        <nav class="nav-area">
+          <ul class="root-items">
+            <li>
+              <a href="#">File</a>
+              <ul>
+                <li><a href="#">Open</a></li>
+                <li><a href="#">Close</a></li>
+                <li><a href="#">Exit</a></li>
               </ul>
             </li>
-
-            <li><span>Help</span></li>
+            <li>
+              <a href="#">About</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Services</a>
+              <ul>
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">Web Development</a></li>
+                <li><a href="#">Email Marketing</a></li>
+                <li>
+                  <a href="#">Graphics Design ></a>
+                  <ul>
+                    <li><a href="#">Logo Design</a></li>
+                    <li><a href="#">Card Design</a></li>
+                    <li><a href="#">Poster Design</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Brochure Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Portfolio</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
           </ul>
-        </div>
+        </nav>
 
         <!-- caption -->
         <div id="caption">
-          <span><b>Test Custom Titlebar in Electron</b></span>
+          <span>Test Custom Titlebar in Electron</span>
         </div>
 
         <!-- system buttons -->
