--- a/index.html
+++ b/index.html
@@ -9,22 +9,69 @@
   <body>
     <header id="titlebar">
       <div id="drag-region">
+        <!-- app icon -->
         <div id="app-icon">
           <img src="icons/code_70x70.png" draggable="false" />
         </div>
 
         <!-- menu  -->
-        <div id="sys-menus">
-          <ul>
-            <li>File</li>
-            <li>Edit</li>
-            <li>Selection</li>
-            <li>About</li>
+        <nav class="nav-area">
+          <ul class="root-items">
+            <li>
+              <a href="#">File</a>
+              <ul>
+                <li><a href="#">Open</a></li>
+                <li><a href="#">Close</a></li>
+                <li><a href="#">Exit</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">About</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Services</a>
+              <ul>
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">Web Development</a></li>
+                <li><a href="#">Email Marketing</a></li>
+                <li>
+                  <a href="#">Graphics Design ></a>
+                  <ul>
+                    <li><a href="#">Logo Design</a></li>
+                    <li><a href="#">Card Design</a></li>
+                    <li><a href="#">Poster Design</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Brochure Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Portfolio</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+              <ul>
+                <li><a href="#">Logo Design</a></li>
+                <li><a href="#">Card Design</a></li>
+                <li><a href="#">Poster Design</a></li>
+              </ul>
+            </li>
           </ul>
-          <!-- caption -->
-          <div id="caption">
-            <span><b>Test Custom Titlebar in Electron</b></span>
-          </div>
+        </nav>
+
+        <!-- caption -->
+        <div id="caption">
+          <span><b>Test Custom Titlebar in Electron</b></span>
         </div>
 
         <!-- system buttons -->
