--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
               </ul>
             </li>
             <li>
-              <a href="#">Portfolio</a>
+              <a href="#">Run</a>
               <ul>
-                <li><a href="#">Logo Design</a></li>
-                <li><a href="#">Card Design</a></li>
-                <li><a href="#">Poster Design</a></li>
+                <li><a href="#">Start Debugging</a></li>
+                <li><a href="#">Run Without Debugging</a></li>
+                <li class="disabled"><a href="#" class="disabled">Stop Debugging</a></li>
+                <li class="disabled"><a href="#" class="disabled">Restart Debugging</a></li>
+                <li class="separator"></li>
+                <li><a href="#">Open Configuration</a></li>
+                <li><a href="#">Add Configuration</a></li>
               </ul>
             </li>
             <li>
@@ -71,7 +75,7 @@
 
         <!-- caption -->
         <div id="caption">
-          <span><b>Test Custom Titlebar in Electron</b></span>
+          <span>Test Custom Titlebar in Electron</span>
         </div>
 
         <!-- system buttons -->
