--- a/design/index-design.html
+++ b/design/index-design.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- menu  -->
-        <nav class="nav-area">
+        <nav id="menubar">
           <ul class="root-items">
             <li>
               <a href="#">File</a>
@@ -152,10 +152,10 @@
     </div>
     <script>
       // menubar class settings
-      const rootMenuItems = document.querySelectorAll(".nav-area > ul > li");
+      const rootMenuItems = document.querySelectorAll("#menubar > ul > li");
       for (let li of rootMenuItems) {
         li.addEventListener("click", (e) => {
-          document.querySelector(".nav-area > ul").classList.toggle("opened");
+          document.querySelector("#menubar > ul").classList.toggle("opened");
         });
       }
 
