--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- menu  -->
-        <nav class="nav-area">
+        <nav id="menubar">
           <ul class="root-items">
             <li>
               <a href="#">File</a>
