--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- menu  -->
         <nav id="menubar">
-          <ul class="root-items">
+          <ul id="root-items">
             <li>
               <a href="#">File</a>
               <ul>
@@ -28,7 +28,7 @@
             <li>
               <a href="#">About</a>
               <ul>
-                <li><a href="#">Logo Design</a></li>
+                <li><a href="#" class="checked">Logo Design</a></li>
                 <li><a href="#">Card Design</a></li>
                 <li><a href="#">Poster Design</a></li>
               </ul>
@@ -99,6 +99,15 @@
       </div>
     </header>
 
+    <div id="main2">
+      <h1>Webapp style testing...</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae saepe odio voluptatibus est itaque amet
+        consequuntur vero vel sit laudantium placeat dolor voluptates, accusamus, maiores officia eum mollitia corporis
+        ipsam!
+      </p>
+    </div>
+
     <div id="main">
       <h1>Content here!</h1>
       <p>
@@ -150,8 +159,72 @@
         </textarea
       >
     </div>
+
+    <div class="statusbar">
+      <p>Your Message goes <a href="/yourlink">here</a></p>
+      <span class="notification-close">X</span>
+    </div>
+
     <script>
-      // You can also require other files to run in this process
+      function delegate(target, selector, eventName, handler) {
+        target.addEventListener(eventName, (e) => {
+          for (let target = e.target; target && target != this; target = target.parentNode) {
+            // loop parent nodes from the target to the delegation node
+            if (target.matches(selector)) {
+              handler(e);
+              break;
+            }
+          }
+        });
+      }
+
+      function notifyMe() {
+        console.log(Notification.permission);
+        if (!("Notification" in window)) {
+          alert("This browser does not support desktop notification");
+          return;
+        }
+
+        // Let's check whether notification permissions have already been granted
+        if (Notification.permission === "granted") {
+          console.log("If it's okay let's create a notification");
+          let notification = new Notification("Hi there!", {
+            body: "More detail message here....",
+            icon: "icons/code_70x70.png",
+          });
+        }
+
+        // Otherwise, we need to ask the user for permission
+        else if (Notification.permission !== "denied") {
+          Notification.requestPermission().then(function (permission) {
+            // If the user accepts, let's create a notification
+            if (permission === "granted") {
+              let notification = new Notification("Hi there!", {
+                body: "More detail message here....",
+              });
+            }
+          });
+        }
+      }
+    </script>
+    <script>
+      // add menubar event handler.
+      const menubar = document.querySelector("#menubar > ul");
+      delegate(menubar, "li", "click", (e) => {
+        console.log(e.target.innerText);
+        switch (e.target.innerText) {
+          case "Logo Design":
+          case "Card Design":
+          case "Poster Design":
+            e.target.classList.toggle("checked");
+            break;
+          case "Add Configuration":
+            notifyMe();
+            break;
+        }
+        //menubar.classList.toggle("opened");
+      });
+
       require("./renderer.js");
     </script>
   </body>
