--- a/design/text-center.html
+++ b/design/text-center.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      body {
-        background-color: #999;
-      }
-      .box {
-        background-color: white;
-        width: 300px;
-        /* height: 200px; */
-        margin: 50px auto;
-        text-align: center;
-        padding: 1em 0;
-      }
-      span {
-        background: orange;
-        display: inline-block;
-        /* line-height: 200px; */
-      }
-    </style>
-  </head>
-  <body>
-    <div class="box">
-      <span>text....<br />next line</span>
-    </div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<style>
+			body {
+				background-color: #999;
+			}
+			.box {
+				background-color: white;
+				width: 300px;
+				/* height: 200px; */
+				margin: 50px auto;
+				text-align: center;
+				padding: 1em 0;
+			}
+			span {
+				background: orange;
+				display: inline-block;
+				/* line-height: 200px; */
+			}
+		</style>
+	</head>
+	<body>
+		<div class="box">
+			<span>text....<br />next line</span>
+		</div>
+
+		<div id="ytplayer" style="width: 100%; height: 300px;"></div>
+
+		<script>
+			// Load the IFrame Player API code asynchronously.
+			var tag = document.createElement("script");
+			tag.src = "https://www.youtube.com/player_api";
+			var firstScriptTag = document.getElementsByTagName("script")[0];
+			firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+			// Replace the 'ytplayer' element with an <iframe> and
+			// YouTube player after the API code downloads.
+			let player;
+			function onYouTubePlayerAPIReady() {
+				player = new YT.Player("ytplayer", {
+					height: "360",
+					width: "640",
+					videoId: "gyyTyVy-UdA",
+				});
+			}
+		</script>
+	</body>
 </html>
