--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <ul>
                   <li><a href="#">Full screenshot</a></li>
                   <li><a href="#">App screenshot</a></li>
+                  <li><a href="#">Open Data Folder</a></li>
                 </ul>
               </li>
             </ul>
