--- a/design/center1.html
+++ b/design/center1.html
@@ -43,7 +43,7 @@
       <div class="children">
         <!-- <img id="centered_image" src="hd.jpg" /> -->
 
-        <img src="code_70x70.png" alt="" id="centered_image" />
+        <img src="icons/vscode-70x70.png" alt="" id="centered_image" />
       </div>
     </div>
   </body>
