--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="drag-region">
           <!-- app icon -->
           <div id="app-icon">
-            <img src="icons/code_70x70.png" draggable="false" />
+            <img src="icons/vscode-70x70.png" draggable="false" />
           </div>
 
           <!-- menu  -->
@@ -108,7 +108,7 @@
       <img id="my-preview" />
       <!-- <div id="youTubePlayer1"></div> -->
 
-      <video id="main" src="./icons/sample.mp4" type="video/mp4" controls></video>
+      <video id="video-main" src="./icons/720p.mp4" type="video/mp4" preload="metadata" loop controls></video>
       <!-- <video id="main" controls></video> -->
       <div id="statusbar">....</div>
     </div>
