--- a/index-bootstrap.html
+++ b/index-bootstrap.html
@@ -19,7 +19,7 @@
         <div id="drag-region">
           <!-- app icon -->
           <div id="app-icon">
-            <img src="icons/code_70x70.png" draggable="false" />
+            <img src="icons/vscode-70x70.png" draggable="false" />
           </div>
 
           <!-- menu  -->
@@ -715,7 +715,7 @@
       function notyObj() {
         let notification = new Notification(msg, {
           body: detail ? detail : msg,
-          icon: "icons/code_70x70.png",
+          icon: "icons/vscode-70x70.png",
         });
         setTimeout(notification.close.bind(notification), 4000);
       }
