--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Custom titlebar</title>
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Remember to include jQuery :) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"
+    />
+    <title>Custom titlebar</title>
   </head>
 
   <body>
@@ -77,9 +86,20 @@
               </li>
               <li>
                 <a href="#">About</a>
+                <!-- Modal HTML embedded directly into document -->
+                <div id="release_note" class="modal">
+                  <p>Thanks for clicking. That felt good.</p>
+                  <a href="#" rel="modal:close">Close</a>
+                </div>
                 <ul>
-                  <li><a href="#" class="checked">Logo Design</a></li>
-                  <li><a href="#">Card Design</a></li>
+                  <li>
+                    <a href="#release_note" rel="modal:open">Release Notes</a>
+                  </li>
+                  <li>
+                    <a href="profile.html" rel="modal:open">Release Notes</a>
+                  </li>
+                  <li><a href="#">Release Notes#</a></li>
+                  <li><a href="#" class="checked">Card Design</a></li>
                   <li><a href="#">Poster Design</a></li>
                 </ul>
               </li>
